# agile_robot

./: .gitignore  README.md
agile-apps/: CMakeLists.txt  package.xml
agile-apps/config/: agile_apps.cfg  agile_gait.cfg  agile_robot.cfg  gait_config.cfg  leg.cfg  leg_agile_apps.cfg  leg_agile_robot.yaml  leg_control.cfg  leg_gait.cfg  leg_robot.cfg  leg_robot_sim.cfg  pd.cfg  pd_robot.cfg  robot_config.cfg  trajecoty.md
agile-apps/config/yaml/: leg.yaml  leg_agile_robot.yaml  leg_control.yaml  leg_robot.yaml  pd.yaml
agile-apps/examples/config/: test_controller.yaml  test_controller2_3.yaml  test_controller_plugins.xml
agile-apps/examples/launch/: test_controller.launch  test_controller2.launch  test_controller3.launch
agile-apps/examples/src/: qr_driver_test.cpp  qr_driver_test.h  qr_driver_test2.cpp  qr_driver_test2.h  qr_driver_test3.cpp  qr_driver_test3.h
agile-apps/include/apps/: control_wrapper.h  pd_ros_wrapper.h  pd_wrapper.h  robot_wrapper.h  ros_robothw.h  ros_wrapper.h
agile-apps/include/apps/internal/: main.cpp  setup_env.h
agile-apps/launch/: agile_bringup.launch  bringup.launch  leg_apps_bringup.launch  leg_bringup.launch  leg_control.launch  leg_control_bringup.launch  leg_robot.launch  leg_robot_bringup.launch  pd_bringup.launch  test.launch  test_leg_agile_robot.launch
agile-apps/src/: control.cpp  entry.cpp  launcher.cpp  main.cpp  pd.cpp  registry_monitor.cpp  robot.cpp
agile-apps/src/apps/: control_wrapper.cpp  pd_ros_wrapper.cpp  pd_wrapper.cpp  robot_wrapper.cpp  ros_robothw.cpp  ros_wrapper.cpp
agile-control/: .gitignore  CMakeLists.txt  package.xml
agile-control/config/: gait_config.cfg
agile-control/include/: mii_control.h
agile-control/include/adt/: discrete.h  fourier.h  geometry.h  polynomial.h  segmented.h  test.cpp  trajectory.h
agile-control/include/adt/internal/: comma_init.h
agile-control/include/gait/: gait_base.h  gait_manager.h
agile-control/include/gait/creep/: creep.h
agile-control/include/gait/sl/: hopping.h  sl_test.h
agile-control/include/gait/walk/: walk.h
agile-control/include/policy/: policy.h  policy_manager.h
agile-control/include/policy/sl/: sl_test.h
agile-control/include/robot/: agile_robot.h  leg_robot.h  qr_robot.h
agile-control/include/robot/body/: agile_body.h  data_body.h  math_body.h  qr_body.h  robot_body.h
agile-control/include/robot/leg/: agile_leg.h  data_leg.h  math_leg.h  qr_leg.h  robot_leg.h
agile-control/src/: main.cpp  mii_control.cpp
agile-control/src/adt/: geometry.cpp
agile-control/src/gait/: gait_base.cpp  gait_manager.cpp
agile-control/src/gait/creep/: creep.cpp
agile-control/src/gait/sl/: hopping.cpp  sl_test.cpp
agile-control/src/gait/walk/: walk.cpp
agile-control/src/policy/: policy.cpp  policy_manager.cpp
agile-control/src/policy/sl/: sl_test.cpp
agile-control/src/robot/: agile_robot.cpp  leg_robot.cpp  qr_robot.cpp
agile-control/src/robot/body/: agile_body.cpp  data_body.cpp  math_body.cpp  qr_body.cpp  robot_body.cpp
agile-control/src/robot/leg/: agile_leg.cpp  data_leg.cpp  math_leg.cpp  qr_leg.cpp  robot_leg.cpp
agile-control/test/: main.cpp
agile-driver/: .gitignore  CMakeLists.txt  package.xml
agile-driver/config/: robot_config.xml
agile-driver/images/: framework.vsdx
agile-driver/include/: mii_robot.h
agile-driver/include/platform/: log_robot.h  master.h
agile-driver/include/platform/propagate/: README.md  can_usb.h  fake_can.h  gazebo_propagate.h  leg_can.h  motor_can.h  motor_pcan.h  pcan.h  pcan_fake.h  propagate.h  propagate_manager.h  usb.h
agile-driver/include/platform/proto/: agile_proto.h
agile-driver/include/platform/sw_node/: leg_node.h  motor_node.h  motor_node0.h  pd_node.h  power_node.h  sw_node.h  sw_node_manager.h  test_node.h
agile-driver/include/repository/: imu_sensor.h  joint.h  joint_manager.h  motor.h
agile-driver/include/robot/: mii_robot.h
agile-driver/include/system/platform/: master.h
agile-driver/include/system/robot/: mii_robot.h
agile-driver/include/system/utils/: composite.h  composite2.h
agile-driver/include/utils/: composite2.h
agile-driver/src/: mii_robot.cpp
agile-driver/src/platform/: log_robot.cpp  master.cpp
agile-driver/src/platform/propagate/: arm_pcan.cpp  can_usb.cpp  fake_can.cpp  gazebo_propagate.cpp  leg_can.cpp  motor_can.cpp  motor_pcan.cpp  pcan.cpp  pcan_fake.cpp  propagate.cpp  propagate_manager.cpp  usb.cpp
agile-driver/src/platform/sw_node/: leg_node.cpp  motor_node.cpp  motor_node0.cpp  pd_node.cpp  power_node.cpp  sw_node.cpp  sw_node_manager.cpp  (+1 more)
agile-driver/src/repository/: force_sensor.cpp  imu_sensor.cpp  joint.cpp  joint_manager.cpp  motor.cpp  power.cpp
agile-driver/src/robot/: mii_robot.cpp
agile-driver/test/: main.cpp
agile-foundation/: CMakeLists.txt  package.xml
agile-foundation/include/foundation/: app.h  auto_instanceor.h  auto_instor.h  cfg_reader.h  label.h  utf.h
agile-foundation/include/repository/: data_service.h  registry.h  registry2.h
agile-foundation/include/toolbox/: pid.h  time_control.h
agile-foundation/src/foundation/: app.cpp  auto_instanceor.cpp  auto_instor.cpp  cfg_reader.cpp  label.cpp
agile-foundation/src/repository/: data_service.cpp  registry.cpp  registry2.cpp  registry_monitor.cpp
agile-foundation/src/toolbox/: pid.cpp  time_control.cpp
agile-foundation/test/: main.cpp  test_registry2.cpp
agile-gazebo/: .gitignore  CMakeLists.txt  package.xml  setup.bash
agile-gazebo/launch/: upload_robot.urdf.launch
agile-gazebo/models/agile_leg/: model.config  model.sdf  model.sdf.v1.0.1
agile-gazebo/models/agile_robot/: model-1_5.sdf  model.config  model.sdf  model.sdf.v1.0.0  model.sdf.v1.0.1  model.sdf.v1.0.2  model.sdf.v1.1.0  model.urdf.xacro
agile-gazebo/models/kinect/: model.sdf
agile-gazebo/plugins/include/: gazebo_propagate.h  gz_agile_leg_plugin.h  gz_agile_plugin.h  gz_agile_robot_plugin.h
agile-gazebo/plugins/src/: gazebo_propagate.cc  gz_agile_leg_plugin.cc  gz_agile_plugin.cc  gz_agile_robot_plugin.cc  model_push.cc
agile-gazebo/worlds/: agile_leg.world  agile_robot.world
(+84 files in other folders)
