<package>
  <name>agile_apps</name>
  <version>0.0.1</version>
  <description>The agile_apps package</description>

  <maintainer email="sunbibei@sina.com">Bibei Sun</maintainer>


  <license>BSD</license>

  <url type="website">http://192.168.1.196/sunbibei/qr-apps/wiki</url>
  <url type="bugtracker">http://192.168.1.196/sunbibei/qr-apps/issues</url>
  <url type="repository">http://192.168.1.196/sunbibei/qr-apps</url>

  <author>Bibei Sun</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>hardware_interface</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>controller_interface</build_depend>
  <build_depend>agile_driver</build_depend>
  <build_depend>agile_control</build_depend>
  <build_depend>agile_foundation</build_depend>


  <run_depend>agile_foundation</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>controller_interface</run_depend>
  <run_depend>agile_driver</run_depend>
  <run_depend>agile_control</run_depend>

  <export>
    <controller_interface plugin="${prefix}/examples/config/test_controller_plugins.xml"/>
  </export>

</package>
